test/users/weili/raiseType3-blc2.good
raiseType3-blc2.chpl:1: error: attempt to redefine reserved type 'int'
